# pythoncalculator

./: .gitignore  README.md  app.py  pyproject.toml  run.bat
src/simple_project/: __main__.py  calculator.py
templates/: index.html
tests/: test_calculator.py
